Events concept in place.

--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,10 @@
   "src": {
     "type": "native-json",
     "url": "./competition.json"
+  },
+  "upcoming": {
+    "title": "Upcoming",
+    "count": 6,
+    "current_title": "Current Lifter"
   }
 }
