--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "anathema": "anathema --config anathema.js",
     "build": "cross-env anathema --config anathema.js build",
+    "server": "cross-env nodemon --delay 1 --watch build -x \"node ./build/StrengthStreamServer.pkg.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +15,8 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
     "@types/deep-diff": "^1.0.0",
+    "@types/express": "^4.17.12",
+    "@types/xlsx": "^0.0.36",
     "anathema": "^0.2.1",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
@@ -22,11 +25,15 @@
     "cross-env": "^7.0.3",
     "deep-diff": "^1.0.2",
     "del": "^6.0.0",
+    "express": "^4.17.1",
     "git-rev": "^0.2.1",
     "less": "^4.1.1",
     "livereload": "^0.9.3",
     "local-web-server": "^4.2.1",
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
     "mocha": "^8.4.0",
+    "nodemon": "^2.0.7",
     "postcss": "^8.3.0",
     "postcss-custom-properties": "^11.0.0",
     "preact": "^10.5.13",
@@ -39,6 +46,7 @@
     "webpack": "^5.37.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-node-externals": "^3.0.0",
-    "webpack-plugin-replace": "^1.2.0"
+    "webpack-plugin-replace": "^1.2.0",
+    "xlsx": "^0.17.0"
   }
 }
