--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "strength-stream-overlay",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/StrengthStreamServer.pkg.js",
   "scripts": {
     "anathema": "anathema --config anathema.js",
     "build": "cross-env anathema --config anathema.js build",
     "server": "cross-env nodemon --delay 1 --watch build -x \"node ./build/StrengthStreamServer.pkg.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "pkg": {
+    "assets": "build/assets/**/*",
+    "outputPath": "dist"
   },
   "author": "",
   "license": "ISC",
