Server now connects to NoonanCMS.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "resolveJsonModule": true,
-    "target": "es5",
+    "useDefineForClassFields": true,
+    "target": "es6",
     "downlevelIteration": true,
     "moduleResolution": "Node",
     "lib": ["es2016", "dom"],
