--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.2",
+    "@types/body-parser": "^1.19.0",
     "@types/deep-diff": "^1.0.0",
     "@types/express": "^4.17.12",
     "@types/xlsx": "^0.0.36",
@@ -25,12 +26,14 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.19.0",
     "clean-css": "^5.1.2",
     "cross-env": "^7.0.3",
     "deep-diff": "^1.0.2",
     "del": "^6.0.0",
     "express": "^4.17.1",
     "git-rev": "^0.2.1",
+    "json-beautify": "^1.1.1",
     "less": "^4.1.1",
     "livereload": "^0.9.3",
     "local-web-server": "^4.2.1",
@@ -41,6 +44,7 @@
     "postcss": "^8.3.0",
     "postcss-custom-properties": "^11.0.0",
     "preact": "^10.5.13",
+    "pretty-print-json": "0.5.0",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "rename": "^1.0.4",
