Fix attempt progression sorting, and bugs related to end of last phase scoreboard bugs.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "pkg": {
     "assets": "build/**/*",
+    "targets": [
+      "node12-win-x64"
+    ],
     "outputPath": "dist"
   },
   "author": "",
